# wcdest

./: ProjectHome.md  README.md  VersionHistory.md  index.html  params.json  wcd.info
code/: AUTHORS  README
code/doc/: Makefile.am  wcd.texi
code/src/: Makefile.am  Makefile.in  WcdMake  alpha  auxcluster.c  common.c  comp2ext.pl  config.h.in  ed.c  ext2comp.pl  main.c  mpistuff.h  oldsuffix  oldwcd  pthreadstuff.c  pthreadstuff.h  suffixcluster.c  suffixcluster.c-18  suffixcluster.c-24  suffixcluster.c-26  v1suffixcluster.c  wcd-express.c  wcd.c  wcd.h
code/src/RCS/: wcd.c,v
code/src/ancillary/: a.out  kabm  readints.c  ricompute.py~  thin.py
wcd-express-0.6.3/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
wcd-express-0.6.3/doc/: Makefile.in  wcd.texi
wcd-express-0.6.3/src/: WcdMake  auxcluster.h  common.c  common.c~  common.h  common.h~  d2.c  d2.h  ed.h  mpistuff.c  pthreadstuff.c  suffixcluster.h  wcd.c  wcd.h  wcd_wrapper.sh
wcd-express-0.6.3/src/ancillary/: analysecluster.py  dustprep-kabm  dustprep-kabm~  fasta2sary.py  idline2cluster.py  prep-kabm  prep-kabm~  ricompute.py  seqextract.py  seqindex.py  wcdstart.sh  winnow.py
wcd-express-0.6.3/tests/: simpletests.sh  simpletests.sh~
wiki/: VersionHistory.wiki
